<resources>
    <string name="app_name">学习通AI智能体</string>
    <!-- Authentication Parameters -->
    <string name="authentication_parameters">认证参数</string>
    <string name="welcome_user">欢迎 %s</string>
    <string name="username_title">用户名</string>
    <string name="password_title">密码</string>
    <string name="save_button_title">保存</string>
    <string name="save_button_summary">点击以保存设置</string>

    <!-- Functional Configuration -->
    <string name="functional_configuration">功能配置</string>
    <string name="feature_toggle_title">启用辅助</string>
    <string name="feature_toggle_run_fun">以root权限工作</string>
    <string name="option_one_title">截屏触发方式</string>
    <string name="option_two_title">请求题解方式</string>
    <string name="option_three_title">显示题解方式</string>

    <!-- Default Values -->
    <string name="default_value">默认值</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_title">开发信息</string>
    <string name="development_information">IT资源网-易识IT-李传玖开发</string>
    <string name="home_url_title">官方网站</string>
    <string name="home_url_summary">https://itziyuanwang.top</string>
    <string name="sponsorship_development_title">赞助开发</string>
    <string name="sponsorship_development_summary">点击请作者喝杯咖啡</string>
    <string name="version_information">版本信息</string>
    <string name="app_version">1.0.1.1</string>
    <string name="home_url">https://www.itziyuanwang.top/</string>
    <string name="github_url_title">Github地址</string>
    <string name="github_url">https://github.com/huiyiruciduojiao/CheatingInXuetong</string>
    <string name="sponsorship_development_url">https://www.itziyuanwang.top/supportOur.html</string>
    <string name="accessibility_desc">学习通AI智能体的基础服务，用于截屏以及监听截屏触发事件</string>
    <string name="float_window_default">还没有题解内容哦！</string>
    <string name="server_base_url_title">服务器基地址</string>
    <string name="authentication_title">验证连接</string>
    <string name="authentication_summary">点击来验证与服务器的连接</string>
    <string name="authentication_no_login">登录账号</string>
    <string name="authentication_no_login_summary">点击来登录账号</string>
    <string name="authentication_success">剩余次数：%s，已使用：%s，总数：%s</string>

<!--    动态代码使用-->
    <string name="user_or_pdw_is_null">用户名或密码不能为空！</string>
    <string name="screenshot_button">截图</string>
    <string name="send_bution">发送</string>
    <string name="close_button">关闭</string>
<!--    lsp相关-->
    <string name="xposeddescription">该模块用于Hook系统音量按钮事件，同时Hook系统UI渲染，将悬浮窗隐藏与截录屏中，移除安全标识，以达到无视禁止截屏</string>
    <string name="welcome_user_no_login">您没有登录，请登录使用</string>
    <string name="welcome_user_login_failure">登录失效，请重新登录</string>
    <string name="logout_title">退出登录</string>
    <string name="logout_summary">点击将退出当前账号</string>
    <string name="username_no_login_summary">您还没有登录，请点击下方的按钮登录</string>
    <string name="login_error_title">登录失败:</string>
    <string name="logout_error_title">登录失败:</string>
</resources>